# ThermotersWebsite

./: .babelrc.cjs  .env  .env.test  .firebaserc  .gitignore  README.md  firebase.json  firebaseConfig.js  firestore.rules  index.html  jest.config.cjs  package-lock.json  package.json  storage.rules  vite.config.js
.cursor/: context.md  cursor-ignore  cursorrules
GCP/: BrickPlotter.py  Brickplot_for_a_sequence.ipynb  brickplot.ipynb  general_functions.py  main.py  main2.py
functions/: .gitignore  BrickPlotter.py  README.md  __init__.py  index.js  main.py  package.json  pyproject.toml  requirements.txt
functions/_stubs/: __init__.py  firebase_admin.py  firebase_functions.py
functions/src/: BrickPlotter.py
functions/submit_job/: main.py  requirements.txt
functions/tests/: run_manual_triggers.py  test_brickplot.py  test_sequence.fasta  test_sequence.txt  test_submit_job.py
functions/utils/: BrickPlotter.py  general_functions.py  model_functions.py
public/: index.jsx
src/: App.jsx  Layout.jsx  firebaseConfig.js  main.jsx  theme.js
src/__mocks__/: firebase.js
src/__tests__/: AlgoForm.test.jsx  HistoryTable.test.jsx  LoginModal.test.jsx
src/components/: AlgoForm.jsx  HistoryTable.jsx  Login.jsx  LoginModal.jsx  NavRail.jsx
src/pages/: History.jsx  HistoryPage.jsx  Home.jsx  JobHistory.jsx
src/styles/: HistoryTable.css
thermoters/: .firebaserc  package-lock.json  package.json
thermoters/dataconnect/: dataconnect.yaml
thermoters/public/: index.html
thermoters/src/: App.jsx  Layout.jsx  index.css  main.jsx
thermoters/src/components/: Login.jsx  (+3 more)
(+7 files in other folders)
